tests/fixtures/positive/privacy/PlainFileWriteOfSensitive.kt
package test

import java.io.File

fun save(dir: File, json: String) {
    File(dir, "credentials.json").writeText(json)
}
